--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -59,7 +59,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#parameters\n",
+    "H, W = 224, 224\n",
+    "channel = 3\n",
+    "IMAGE_SHAPE = [224, 224]\n",
+    "num_class = 3\n",
+    "batch_size = 64\n",
+    "class_names = [\"brain_glioma\", \"brain_menin\", \"brain_tumor\"]"
+   ]
   }
  ],
  "metadata": {
