create a funtion for preprocess the data

--- a/notebook/brain-tumer-prediction-VGG16.ipynb
+++ b/notebook/brain-tumer-prediction-VGG16.ipynb
@@ -48,8 +48,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.imread(files[0])\n",
-    "plt.imshow(img)"
+    "def preprocess_data(image):\n",
+    "    img = cv2.imread(image,cv2.IMREAD_COLOR)\n",
+    "    img = cv2.resize(img,(H.W))\n",
+    "    img = img / 255.0\n",
+    "    img = img.astype(np.float32)\n",
+    "    return img"
    ]
   },
   {
@@ -58,42 +62,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "img = preprocess_data(files[0])\n",
     "img.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = cv2.resize(img,(256,256))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = img / 255.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
