--- a/notebook/resnet-tumor-project-n-2.ipynb
+++ b/notebook/resnet-tumor-project-n-2.ipynb
@@ -76,6 +76,21 @@
     "  \n",
     "    return image, labels"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tensorflow dataset\n",
+    "def tf_dataset(images, batch=8):\n",
+    "    dataset = tf.data.Dataset.from_tensor_slices((images))\n",
+    "    dataset = dataset.map(parse)\n",
+    "    dataset = dataset.batch(batch_size)\n",
+    "    dataset = dataset.prefetch(8)\n",
+    "    return dataset"
+   ]
   }
  ],
  "metadata": {
