convert numpy array to tenserflow array

--- a/notebook/brain-tumer-prediction-VGG16.ipynb
+++ b/notebook/brain-tumer-prediction-VGG16.ipynb
@@ -19,6 +19,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "H, W = 256, 256\n",
+    "classes = [\"brain_glioma\",\"brain_menin\",\"brain_tumor\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "path = \"/kaggle/input/multi-cancer/Multi Cancer/Brain Cancer\""
    ]
   },
@@ -53,7 +63,11 @@
     "    img = cv2.resize(img,(H.W))\n",
     "    img = img / 255.0\n",
     "    img = img.astype(np.float32)\n",
-    "    return img"
+    "\n",
+    "    lable = image.split(\"/\")[-2]\n",
+    "    class_idx = classes_name.index[lable]\n",
+    "\n",
+    "    return img,class_idx"
    ]
   },
   {
@@ -62,8 +76,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = preprocess_data(files[0])\n",
-    "img.shape"
+    "img,class_idx = preprocess_data(files[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = np.array(class_idx,np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse(path):\n",
+    "    images,labels = tf.numpy_function(preprocess_data,[path],[tf.float32,tf.int32])\n",
+    "    labels = tf.one_hot(labels,3)\n",
+    "    images.set_shape([256,256,3])\n",
+    "    labels.set_shape(3)\n",
+    "\n",
+    "    return images,labels"
    ]
   }
  ],
