--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -1,85 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'pip' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install tensorflow==2.10.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'cv2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\My Pc\\Documents\\Brain-Cancer-Prediction-\\notebook\\inceptionv3-tumor-project-n-2.ipynb Cell 2\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/My%20Pc/Documents/Brain-Cancer-Prediction-/notebook/inceptionv3-tumor-project-n-2.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#importing libraries\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/My%20Pc/Documents/Brain-Cancer-Prediction-/notebook/inceptionv3-tumor-project-n-2.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/My%20Pc/Documents/Brain-Cancer-Prediction-/notebook/inceptionv3-tumor-project-n-2.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcv2\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/My%20Pc/Documents/Brain-Cancer-Prediction-/notebook/inceptionv3-tumor-project-n-2.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mitertools\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/My%20Pc/Documents/Brain-Cancer-Prediction-/notebook/inceptionv3-tumor-project-n-2.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cv2'"
-     ]
-    }
-   ],
-   "source": [
-    "#importing libraries\n",
-    "import os\n",
-    "import cv2\n",
-    "import itertools\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf\n",
-    "from sklearn.utils import shuffle\n",
-    "from glob import glob\n",
-    "from tensorflow.keras import layers\n",
-    "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.callbacks import*\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import metrics\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from tensorflow.keras.applications import InceptionV3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#parameters\n",
-    "H, W = 224, 224\n",
-    "channel = 3\n",
-    "IMAGE_SHAPE = [224, 224]\n",
-    "num_class = 3\n",
-    "batch_size = 64\n",
-    "class_names = [\"brain_glioma\", \"brain_menin\", \"brain_tumor\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_path = \"/kaggle/working//models/vgg_for_brain_tumor-v2.h5\"\n",
-    "path = \"/kaggle/input/multi-cancer/Multi Cancer/Brain Cancer\""
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
