create folder for save augmented images

--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -1,5 +1,83 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install tensorflow==2.10.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importing libraries\n",
+    "import os\n",
+    "import cv2\n",
+    "import itertools\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf\n",
+    "from sklearn.utils import shuffle\n",
+    "from glob import glob\n",
+    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.callbacks import*\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from tensorflow.keras.applications import InceptionV3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#parameters\n",
+    "H, W = 224, 224\n",
+    "channel = 3\n",
+    "IMAGE_SHAPE = [224, 224]\n",
+    "num_class = 3\n",
+    "batch_size = 64\n",
+    "class_names = [\"brain_glioma\", \"brain_menin\", \"brain_tumor\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = \"/kaggle/working//models/vgg_for_brain_tumor-v2.h5\"\n",
+    "path = \"/kaggle/input/multi-cancer/Multi Cancer/Brain Cancer\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Functions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create folder for save augmented images\n",
+    "def create_dir(path):\n",
+    "    if not os.path.exists(path):\n",
+    "        os.makedirs(path)"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
