--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -76,6 +76,20 @@
     "    if not os.path.exists(path):\n",
     "        os.makedirs(path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data(path, split=0.1):\n",
+    "    images = shuffle(glob(os.path.join(path, \"*\", \"*.jpg\")))\n",
+    "    split_rate = int(len(images) * split)\n",
+    "    train, valid = train_test_split(images, test_size=split_rate, random_state=42)\n",
+    "    train, test = train_test_split(train, test_size=split_rate, random_state=42)\n",
+    "    return train, valid, test"
+   ]
   }
  ],
  "metadata": {
