create functions for process images

--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -90,6 +90,32 @@
     "    train, test = train_test_split(train, test_size=split_rate, random_state=42)\n",
     "    return train, valid, test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_image(path):\n",
+    "    #decode the path\n",
+    "    path = path.decode()\n",
+    "    #read image\n",
+    "    image = cv2.imread(path, cv2.IMREAD_COLOR)\n",
+    "    #resize the image\n",
+    "    image = cv2.resize(image, [224, 224])\n",
+    "    #scale the image\n",
+    "    image = image / 255.0\n",
+    "    #change the data type of image\n",
+    "    image = image.astype(np.float32)\n",
+    "\n",
+    "    #labeling the image\n",
+    "    class_name = path.split(\"/\")[-2]\n",
+    "    class_idx = class_names.index(class_name)\n",
+    "    class_idx = np.array(class_idx, dtype=np.int32)\n",
+    "\n",
+    "    return image, class_idx"
+   ]
   }
  ],
  "metadata": {
