set tensorflow dataset

--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -116,6 +116,36 @@
     "\n",
     "    return image, class_idx"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse(path):\n",
+    "    image, labels = tf.numpy_function(process_image, [path], (tf.float32, tf.int32))\n",
+    "    labels = tf.one_hot(labels, 3)\n",
+    "    image.set_shape([224, 224, 3])\n",
+    "    labels.set_shape(3)\n",
+    "  \n",
+    "    return image, labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tensorflow dataset\n",
+    "def tf_dataset(images, batch=8):\n",
+    "    dataset = tf.data.Dataset.from_tensor_slices((images))\n",
+    "    dataset = dataset.map(parse)\n",
+    "    dataset = dataset.batch(batch_size)\n",
+    "    dataset = dataset.prefetch(8)\n",
+    "    return dataset"
+   ]
   }
  ],
  "metadata": {
