declare the model

--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -181,6 +181,17 @@
    "source": [
     "x = layers.Flatten()(incp.output)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_layer = layers.Dense(num_class, activation='softmax' )(x)\n",
+    "#declare the model\n",
+    "model = Model(inputs=incp.input, outputs=prediction_layer)"
+   ]
   }
  ],
  "metadata": {
