--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -192,6 +192,15 @@
     "#declare the model\n",
     "model = Model(inputs=incp.input, outputs=prediction_layer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_dir(\"/kaggle/working/models\")"
+   ]
   }
  ],
  "metadata": {
