set functions for model summary

--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -201,6 +201,36 @@
    "source": [
     "create_dir(\"/kaggle/working/models\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "callbacks = [\n",
+    "    ModelCheckpoint(model_path, verbose=1, save_best_only=True),\n",
+    "    ReduceLROnPlateau(monitor='val_accuracy', factor=0.1, patience=5, min_lr=1e-6, verbose=1)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
   }
  ],
  "metadata": {
