add data preprocessing parts

--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -231,6 +231,75 @@
    "source": [
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, valid, test = load_data(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\" Train:{len(train)} Valid:{len(valid)}, Test:{len(test)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = tf_dataset(train)\n",
+    "valid_df = tf_dataset(valid)\n",
+    "test_df = tf_dataset(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, j in train_df.take(1):\n",
+    "    print(i.numpy().shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(\n",
+    "    train_df,\n",
+    "    validation_data=test_df,\n",
+    "    epochs=20,\n",
+    "    callbacks=callbacks\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.evaluate(test_df)"
+   ]
   }
  ],
  "metadata": {
