--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -300,6 +300,38 @@
    "source": [
     "model.evaluate(test_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "#plot confusion matrix\n",
+    "def plt_confusion_matrix(cm, classes, normalize=False, title=\"Confusion Matrix\", cmap=plt.cm.Blues):\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    plt.title(title)\n",
+    "    plt.colorbar()\n",
+    "    tick_mark = np.arange(len(classes))\n",
+    "    plt.xticks(tick_mark, classes, rotation=45)\n",
+    "    plt.yticks(tick_mark, classes)\n",
+    "\n",
+    "    if normalize:\n",
+    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.axis]\n",
+    "        print(\"normalized confusion matrix\")\n",
+    "\n",
+    "    else:\n",
+    "        print(\"confusion matrix without normalization\")\n",
+    "\n",
+    "    thresh = cm.max() / 2\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        plt.text(j, i, cm[i, j], horizontalalignment=\"center\", color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.xlabel(\"predicted label\")\n",
+    "    plt.ylabel(\"True label\")"
+   ]
   }
  ],
  "metadata": {
