--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -332,6 +332,16 @@
     "    plt.xlabel(\"predicted label\")\n",
     "    plt.ylabel(\"True label\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#prediction\n",
+    "prediction = model.predict(test_df, verbose=0)"
+   ]
   }
  ],
  "metadata": {
