function for get labels of test set

--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -360,6 +360,23 @@
    "source": [
     "y_pred_classes = np.argmax(prediction, axis=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function for get labels of test set\n",
+    "def get_test_data_class(test_path):\n",
+    "    names = []\n",
+    "    for i in test_path:\n",
+    "        name = i.split(\"/\")[-2]\n",
+    "        name_idx = class_names.index(name)\n",
+    "        names.append(name_idx)\n",
+    "    names = np.array(names, dtype=np.int32)\n",
+    "    return names"
+   ]
   }
  ],
  "metadata": {
