set  functions for get confusion matrix

--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -377,6 +377,33 @@
     "    names = np.array(names, dtype=np.int32)\n",
     "    return names"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = get_test_data_class(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm = confusion_matrix(y_true=classes, y_pred=y_pred_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt_confusion_matrix(cm=cm, classes=class_names, title=\"confusion matrix\", )"
+   ]
   }
  ],
  "metadata": {
