Define function evaluate model on given dataset

--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -404,6 +404,50 @@
    "source": [
     "plt_confusion_matrix(cm=cm, classes=class_names, title=\"confusion matrix\", )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "\n",
+    "# Define a function to evaluate the model on a given dataset\n",
+    "def evaluate_model(model, dataset):\n",
+    "    y_true = []\n",
+    "    y_pred = []\n",
+    "\n",
+    "    for images, labels in dataset:\n",
+    "        predictions = model.predict(images)\n",
+    "        predicted_labels = np.argmax(predictions, axis=1)\n",
+    "        true_labels = np.argmax(labels, axis=1)\n",
+    "        y_true.extend(true_labels)\n",
+    "        y_pred.extend(predicted_labels)\n",
+    "\n",
+    "    accuracy = accuracy_score(y_true, y_pred)\n",
+    "    f1_scores = f1_score(y_true, y_pred, average=None)\n",
+    "\n",
+    "    return accuracy, f1_scores\n",
+    "\n",
+    "# Evaluate the model on the test dataset\n",
+    "test_accuracy, test_f1_scores = evaluate_model(model, test_df)\n",
+    "\n",
+    "# Evaluate the model on the train dataset (optional)\n",
+    "train_accuracy, train_f1_scores = evaluate_model(model, train_df)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Test Accuracy:\", test_accuracy)\n",
+    "print(\"F1-Score (Giloma):\", test_f1_scores[0])\n",
+    "print(\"F1-Score (Menin):\", test_f1_scores[1])\n",
+    "print(\"F1-Score (Tumor):\", test_f1_scores[2])\n",
+    "\n",
+    "# If you want to print the results for the train dataset as well\n",
+    "# print(\"Train Accuracy:\", train_accuracy)\n",
+    "# print(\"Train F1-Score (Giloma):\", train_f1_scores[0])\n",
+    "# print(\"Train F1-Score (Menin):\", train_f1_scores[1])\n",
+    "# print(\"Train F1-Score (Tumor):\", train_f1_scores[2])"
+   ]
   }
  ],
  "metadata": {
