--- a/notebook/inceptionv3-tumor-project-n-2.ipynb
+++ b/notebook/inceptionv3-tumor-project-n-2.ipynb
@@ -384,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classes = get_test_data_class(x_test)"
+    "classes = get_test_data_class(test)"
    ]
   },
   {
