create pipline for pass the image batch

--- a/notebook/brain-tumer-prediction-VGG16.ipynb
+++ b/notebook/brain-tumer-prediction-VGG16.ipynb
@@ -10,7 +10,8 @@
     "from glob import glob\n",
     "import cv2\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf"
    ]
   },
   {
@@ -102,6 +103,72 @@
     "\n",
     "    return images,labels"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tf_datasets(images, batch_size=8):\n",
+    "    dataset = tf.data.Dataset.from_tensor_slices((images))\n",
+    "    dataset = dataset.map(parse)\n",
+    "    dataset = dataset.batch(batch_size)\n",
+    "    dataset = dataset.prefetch(8)\n",
+    "    return dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_ds = tf_datasets(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i,j in image_ds.take(1):\n",
+    "    print(i.numpy.shape())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def PlotPipeImg(img_arr):\n",
+    "    fig,ax = plt.subplots(1,10,figsize=(10,10))\n",
+    "    axes = ax.flatten()\n",
+    "    for img, ax in zip(img_arr,axes):\n",
+    "        ax.imshow(img)\n",
+    "        ax.axis(\"off\")\n",
+    "\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img,idl = next(iter(image_ds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
