add modal arctrecure VGG16 and train the model

--- a/notebook/brain-tumer-prediction-VGG16.ipynb
+++ b/notebook/brain-tumer-prediction-VGG16.ipynb
@@ -11,7 +11,9 @@
     "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.application import VGG16\n",
+    "from tensorflow.keras import layers"
    ]
   },
   {
@@ -21,7 +23,9 @@
    "outputs": [],
    "source": [
     "H, W = 256, 256\n",
-    "classes = [\"brain_glioma\",\"brain_menin\",\"brain_tumor\"]"
+    "image_size = [256,256]\n",
+    "c=3\n",
+    "class_name = [\"brain_glioma\",\"brain_menin\",\"brain_tumor\"]"
    ]
   },
   {
@@ -161,6 +165,34 @@
    "outputs": [],
    "source": [
     "img,idl = next(iter(image_ds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = VGG16(input_shape=image_size+[c], weights='imagenet',include_top=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for layer in model.layers:\n",
+    "    layer.trainable = False"
    ]
   },
   {
