model train and get test value

--- a/notebook/brain-tumer-prediction-VGG16.ipynb
+++ b/notebook/brain-tumer-prediction-VGG16.ipynb
@@ -13,7 +13,10 @@
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.application import VGG16\n",
-    "from tensorflow.keras import layers"
+    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras.callbacks import Callbacks,Modelcheckpoint ReduceLROnPlateau\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.optimizers import Adam"
    ]
   },
   {
@@ -25,7 +28,9 @@
     "H, W = 256, 256\n",
     "image_size = [256,256]\n",
     "c=3\n",
-    "class_name = [\"brain_glioma\",\"brain_menin\",\"brain_tumor\"]"
+    "class_name = [\"brain_glioma\",\"brain_menin\",\"brain_tumor\"]\n",
+    "lr = 1e-4\n",
+    "model_path = \"\""
    ]
   },
   {
@@ -43,9 +48,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_data(path):\n",
+    "def load_data(path,split=0.1):\n",
     "    files = glob(os.path.join(path,\"*\",\"*\"))\n",
-    "    return files"
+    "    split_rate = int(len(files) * split)\n",
+    "    \n",
+    "    train,valid = train_test_split(files,test_size=split_rate)\n",
+    "    train,test = train_test_split(train,test_size=split_rate)\n",
+    "\n",
+    "    return train,valid,test"
    ]
   },
   {
@@ -128,6 +138,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "train_ds = tf_datasets(train)\n",
+    "valid_ds = tf_datasets(valid)\n",
+    "test_ds = tf_datasets(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "image_ds = tf_datasets(files)"
    ]
   },
@@ -200,7 +221,63 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = layers.Flatten()(model.output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "last_layer = layers.Dense(3,activation='softmax')(x)\n",
+    "model = Model(inputs=model.input,outputs=last_layer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "callback=[\n",
+    "    Modelcheckpoint(model_path,verbose=1,save_best_only = True),\n",
+    "    ReduceLROnPlateau(monitor = \"val_Loss\",patience=5,min_lr = 1e-5,factor=0.1,verbose=1)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss='',optimizer=Adam(lr),metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(\n",
+    "    train_ds,\n",
+    "    valid_ds,\n",
+    "    epochs = 20,\n",
+    "    Callbacks,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.evaluate(test_ds)"
+   ]
   }
  ],
  "metadata": {
