get matrix and accuracy values

--- a/notebook/brain-tumer-prediction-VGG16.ipynb
+++ b/notebook/brain-tumer-prediction-VGG16.ipynb
@@ -278,6 +278,159 @@
    "source": [
     "model.evaluate(test_ds)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "def plt_confusion_matrix(cm, classes, normalize=False, title=\"Confusion Matrix\", cmap=plt.cm.Blues):\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    plt.title(title)\n",
+    "    plt.colorbar()\n",
+    "    tick_mark = np.arange(len(classes))\n",
+    "    plt.xticks(tick_mark, classes, rotation=45)\n",
+    "    plt.yticks(tick_mark, classes)\n",
+    "\n",
+    "    if normalize:\n",
+    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.axis]\n",
+    "        print(\"normalized confusion matrix\")\n",
+    "\n",
+    "    else:\n",
+    "        print(\"confusion matrix without normalization\")\n",
+    "\n",
+    "   thresh = cm.max() / 2\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        plt.text(j, i, cm[i, j], horizontalalignment=\"center\", color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.xlabel(\"predicted label\")\n",
+    "    plt.ylabel(\"True label\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model.predict(test_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.round(predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_classes = np.argmax(predictions, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_test_data_class(test_path):\n",
+    "    names = []\n",
+    "    for i in test_path:\n",
+    "        name = i.split(\"/\")[-2]\n",
+    "        name_idx = class_name.index(name)\n",
+    "        names.append(name_idx)\n",
+    "    names = np.array(names, dtype=np.int32)\n",
+    "    return names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = get_test_data_class(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm = confusion_matrix(y_true=classes, y_pred=y_pred_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt_confusion_matrix(cm=cm, classes=class_name, title='cm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confusion matrix without normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function to evaluate the model on a given dataset\n",
+    "def evaluate_model(model, dataset):\n",
+    "    y_true = []\n",
+    "    y_pred = []\n",
+    "\n",
+    "    for images, labels in dataset:\n",
+    "        predictions = model.predict(images)\n",
+    "        predicted_labels = np.argmax(predictions, axis=1)\n",
+    "        true_labels = np.argmax(labels, axis=1)\n",
+    "        y_true.extend(true_labels)\n",
+    "        y_pred.extend(predicted_labels)\n",
+    "\n",
+    "    accuracy = accuracy_score(y_true, y_pred)\n",
+    "    f1_scores = f1_score(y_true, y_pred, average=None)\n",
+    "\n",
+    "    return accuracy, f1_scores\n",
+    "\n",
+    "# Evaluate the model on the test dataset\n",
+    "test_accuracy, test_f1_scores = evaluate_model(model, test_ds)\n",
+    "\n",
+    "# Evaluate the model on the train dataset (optional)\n",
+    "train_accuracy, train_f1_scores = evaluate_model(model, train_ds)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Test Accuracy:\", test_accuracy)\n",
+    "print(\"F1-Score (Giloma):\", test_f1_scores[0])\n",
+    "print(\"F1-Score (Menin):\", test_f1_scores[1])\n",
+    "print(\"F1-Score (Tumor):\", test_f1_scores[2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
