Load and assign data sets

--- a/notebook/resnet-tumor-project-n-2.ipynb
+++ b/notebook/resnet-tumor-project-n-2.ipynb
@@ -176,6 +176,35 @@
    "source": [
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, valid, test = load_data(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\" Train:{len(train)} Valid:{len(valid)}, Test:{len(test)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = tf_dataset(train)\n",
+    "valid_df = tf_dataset(valid)\n",
+    "test_df = tf_dataset(test)"
+   ]
   }
  ],
  "metadata": {
