--- a/notebook/resnet-tumor-project-n-2.ipynb
+++ b/notebook/resnet-tumor-project-n-2.ipynb
@@ -205,6 +205,30 @@
     "valid_df = tf_dataset(valid)\n",
     "test_df = tf_dataset(test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, j in train_df.take(1):\n",
+    "    print(i.numpy().shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(\n",
+    "    train_df,\n",
+    "    validation_data=test_df,\n",
+    "    epochs=20,\n",
+    "    callbacks=callbacks\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
