Evaluate train and test dataset

--- a/notebook/resnet-tumor-project-n-2.ipynb
+++ b/notebook/resnet-tumor-project-n-2.ipynb
@@ -229,6 +229,24 @@
     "    callbacks=callbacks\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.evaluate(test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.evaluate(train_df)"
+   ]
   }
  ],
  "metadata": {
