--- a/notebook/resnet-tumor-project-n-2.ipynb
+++ b/notebook/resnet-tumor-project-n-2.ipynb
@@ -16,6 +16,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing libraries\n",
+    "import os\n",
+    "import cv2\n",
+    "import itertools\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf\n",
+    "from sklearn.utils import shuffle\n",
+    "from glob import glob\n",
+    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.callbacks import*\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from tensorflow.keras.applications import ResNet50\n",
+    "from sklearn.metrics import accuracy_score, f1_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#parameters\n",
+    "H, W = 224, 224\n",
+    "channel = 3\n",
+    "IMAGE_SHAPE = [224, 224]\n",
+    "num_class = 3\n",
+    "batch_size = 64\n",
+    "class_names = [\"brain_glioma\", \"brain_menin\", \"brain_tumor\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#create folder for save augmented images\n",
     "def create_dir(path):\n",
     "    if not os.path.exists(path):\n",
@@ -247,6 +287,117 @@
    "source": [
     "model.evaluate(train_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#plot confusion matrix\n",
+    "def plt_confusion_matrix(cm, classes, normalize=False, title=\"Confusion Matrix\", cmap=plt.cm.Blues):\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    plt.title(title)\n",
+    "    plt.colorbar()\n",
+    "    tick_mark = np.arange(len(classes))\n",
+    "    plt.xticks(tick_mark, classes, rotation=45)\n",
+    "    plt.yticks(tick_mark, classes)\n",
+    "\n",
+    "    if normalize:\n",
+    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.axis]\n",
+    "        print(\"normalized confusion matrix\")\n",
+    "\n",
+    "    else:\n",
+    "        print(\"confusion matrix without normalization\")\n",
+    "\n",
+    "    thresh = cm.max() / 2\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        plt.text(j, i, cm[i, j], horizontalalignment=\"center\", color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.xlabel(\"predicted label\")\n",
+    "    plt.ylabel(\"True label\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#prediction\n",
+    "prediction = model.predict(test_df, verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.around(prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_classes = np.argmax(prediction, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function for get labels of test set\n",
+    "def get_test_data_class(test_path):\n",
+    "    names = []\n",
+    "    for i in test_path:\n",
+    "        name = i.split(\"/\")[-2]\n",
+    "        name_idx = class_names.index(name)\n",
+    "        names.append(name_idx)\n",
+    "    names = np.array(names, dtype=np.int32)\n",
+    "    return names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = get_test_data_class(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm = confusion_matrix(y_true=classes, y_pred=y_pred_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt_confusion_matrix(cm=cm, classes=class_names, title=\"confusion matrix\", )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
